<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.example.khowoatt.homebakery.Register"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/barMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/actionModeSplitBackground"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="@dimen/icon"
        android:layout_height="@dimen/icon"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/iconback_white"
        android:onClick="onClickBack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/titleMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:lineSpacingExtra="24sp"
        android:text="@string/regis"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="UnusedAttribute"
        app:layout_constraintTop_toTopOf="@+id/barMain"
        android:layout_marginTop="10dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/barMain"
        app:layout_constraintLeft_toRightOf="@+id/btnMenu"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.378"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/btnregis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/nameapp"
        android:onClick="btnregis"
        android:text="@string/regis"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="450dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnregis"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barMain"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/txtuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/titleregis"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/user"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="184dp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="301dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/regisemail"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="240dp" />

        <TextView
            android:id="@+id/txtpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/createpass"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="353dp" />

        <EditText
            android:id="@+id/confirmpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/comfirmregis"
            android:inputType="textPassword" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
