<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imvcake"
        android:layout_width="@dimen/my_icon"
        android:layout_height="@dimen/my_icon"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <TextView
        android:id="@+id/namecake"
        android:layout_width="220dp"
        android:layout_height="65dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:paddingEnd="@dimen/my_margin"
        android:paddingRight="@dimen/my_margin"
        android:text="@string/listname"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imvcake"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998"
        tools:ignore="RtlHardcoded,RtlSymmetry"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/pricecake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="72dp"
        android:text="@string/listprice"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/bathcake"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/bathcake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="8dp"
        android:text="@string/bath"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/pricecake"
        tools:ignore="RtlHardcoded" />
</android.support.constraint.ConstraintLayout>